#5 tungts change layouts

--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -1,19 +1,11 @@
 {
-    "cancel": "Hủy",
-    "save": "Lưu",
-    "create": "Thêm",
-    "edit": "Sửa",
-    "delete": "Xóa",
-    "search": "Tìm kiếm",
-    "nal": "https://nal.vn/vi/",
-    "home": "Trang chủ",
-    "nal lg": "NAL-COMPANY",
-    "vertical": "Xác thực mail",
-    "manager staff": "Quản lí nhân viên",
-    "account manager": "Tài khoản",
-    "account show": "Thông tin tài khoản",
-    "account edit": "Sửa thông tin tài khoản",
-    "alert delete": "Bạn có chắc chắn muốn xóa?",
+    "Home": "Trang chủ",
+    "Vertical Email": "Xác thực mail",
+    "Manager Staff": "Quản lí nhân viên",
+    "Account Manager": "Tài khoản",
+    "Account": "Thông tin tài khoản",
+    "Account Edit": "Sửa thông tin tài khoản",
+    "Are you sure you want to delete?": "Bạn có chắc chắn muốn xóa?",
     
     "30 Days": "30 Ngày",
     "60 Days": "60 Ngày",
