#5 tungts change layouts

--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -6,7 +6,8 @@
     "Account": "Thông tin tài khoản",
     "Account Edit": "Sửa thông tin tài khoản",
     "Are you sure you want to delete?": "Bạn có chắc chắn muốn xóa?",
-    
+    "Funtions"  : "Chức năng",
+
     "30 Days": "30 Ngày",
     "60 Days": "60 Ngày",
     "90 Days": "90 Ngày",
