code #5 tungts user_profile manager_staff view vertify_email

--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -2,11 +2,15 @@
     "Home": "Trang chủ",
     "Vertical Email": "Xác thực mail",
     "Manager Staff": "Quản lí nhân viên",
-    "Account Manager": "Tài khoản",
-    "Account": "Thông tin tài khoản",
+    "Account Manager": "Quản lí tài khoản",
+    "Setting": "Cài Đặt",
+    "Account information": "Thông tin tài khoản",
     "Account Edit": "Sửa thông tin tài khoản",
     "Are you sure you want to delete?": "Bạn có chắc chắn muốn xóa?",
-    "Funtions"  : "Chức năng",
+    "Funtions": "Chức năng",
+    "Add New Staff": "Thêm mới nhân viên",
+    "Add New": "Thêm mới",
+    "Add New Complete": "Thêm mới thành công",
 
     "30 Days": "30 Ngày",
     "60 Days": "60 Ngày",
@@ -440,7 +444,7 @@
     "Please provide your name.": "Vui lòng cung cấp tên của bạn.",
     "Poland": "Ba Lan",
     "Portugal": "Bồ Đào Nha",
-    "Press \/ to search": "Nhấn \/ để tìm kiếm",
+    "Press / to search": "Nhấn / để tìm kiếm",
     "Preview": "Xem Trước",
     "Previous": "Trang Trước",
     "Privacy Policy": "Điều Khoản Riêng Tư",
@@ -537,7 +541,7 @@
     "Sri Lanka": "Sri Lanka",
     "Standalone Actions": "Hành động độc lập",
     "Start Polling": "Bắt Đầu Thăm Dò Ý Kiến",
-    "State \/ County": "Tiểu bang \/ Quốc gia",
+    "State / County": "Tiểu bang / Quốc gia",
     "Stop Polling": "Dừng Thăm Dò Ý Kiến",
     "Store these recovery codes in a secure password manager. They can be used to recover access to your account if your two factor authentication device is lost.": "Lưu trữ các mã khôi phục này trong trình quản lý mật khẩu an toàn. Chúng có thể được sử dụng để khôi phục quyền truy cập vào tài khoản của bạn nếu thiết bị xác thực hai yếu tố của bạn bị mất.",
     "Subscribe": "Đăng ký",
@@ -713,6 +717,6 @@
     "Your registered VAT Number is :vatNumber.": "Mã số VAT đã đăng ký của bạn là :vatNumber.",
     "Zambia": "Zambia",
     "Zimbabwe": "Zimbabwe",
-    "Zip \/ Postal Code": "Zip \/ Mã Bưu Điện",
+    "Zip / Postal Code": "Zip / Mã Bưu Điện",
     "Åland Islands": "Quần đảo Åland"
 }
