--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -4,6 +4,7 @@
     "Manager Staff": "Quản lí nhân viên",
     "Account Manager": "Quản lí tài khoản",
     "Setting": "Cài Đặt",
+    "Change Password": "Đổi mật khẩu",
     "Account information": "Thông tin tài khoản",
     "Account Edit": "Sửa thông tin tài khoản",
     "Are you sure you want to delete?": "Bạn có chắc chắn muốn xóa?",
@@ -11,6 +12,7 @@
     "Add New Staff": "Thêm mới nhân viên",
     "Add New": "Thêm mới",
     "Add New Complete": "Thêm mới thành công",
+    "Yes, Delete it!": "Có, Hãy xóa nó !",
 
     "30 Days": "30 Ngày",
     "60 Days": "60 Ngày",
