code#5 tungts role upload image manager staff

--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -13,6 +13,7 @@
     "Add New": "Thêm mới",
     "Add New Complete": "Thêm mới thành công",
     "Yes, Delete it!": "Có, Hãy xóa nó !",
+    "Erros": "Lỗi",
 
     "30 Days": "30 Ngày",
     "60 Days": "60 Ngày",
