--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -2,13 +2,18 @@
     "Home": "Trang chủ",
     "Vertical Email": "Xác thực mail",
     "Manager Staff": "Quản lí nhân viên",
-    "Account Manager": "Tài khoản",
+    "Account Manager": "Quản lí tài khoản",
     "Setting": "Cài Đặt",
-    "Account": "Thông tin tài khoản",
+    "Change Password": "Đổi mật khẩu",
+    "Account information": "Thông tin tài khoản",
     "Account Edit": "Sửa thông tin tài khoản",
     "Are you sure you want to delete?": "Bạn có chắc chắn muốn xóa?",
     "Funtions": "Chức năng",
-
+    "Add New Staff": "Thêm mới nhân viên",
+    "Add New": "Thêm mới",
+    "Add New Complete": "Thêm mới thành công",
+    "Yes, Delete it!": "Có, Hãy xóa nó !",
+    "Erros": "Lỗi",
     "30 Days": "30 Ngày",
     "60 Days": "60 Ngày",
     "90 Days": "90 Ngày",
