--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -14,6 +14,10 @@
     "Add New Complete": "Thêm mới thành công",
     "Yes, Delete it!": "Có, Hãy xóa nó !",
     "Erros": "Lỗi",
+    "Remote, On leave, OT": "Remote, Nghỉ phép, OT",
+    "Add New Registration": "Đăng kí mới ",
+    "Registration": "Đăng kí",
+    "Manager": "Quản lí",
     "30 Days": "30 Ngày",
     "60 Days": "60 Ngày",
     "90 Days": "90 Ngày",
