#4 duybv code crud, search holiday

--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -1,4 +1,5 @@
 {
+    "No.": "STT",
     "Home": "Trang chủ",
     "Vertical Email": "Xác thực mail",
     "Manager Staff": "Quản lí nhân viên",
@@ -14,6 +15,15 @@
     "Add New Complete": "Thêm mới thành công",
     "Yes, Delete it!": "Có, Hãy xóa nó !",
     "Erros": "Lỗi",
+    "Holidays": "Nghỉ lễ",
+    "Manage Holidays": "Quản lý nghỉ lễ",
+    "Options": "Lựa chọn",
+    "From Date": "Từ ngày",
+    "To Date": "Đến ngày",
+    "Sort by": "Sắp xếp",
+    "ASC": "Tăng dần",
+    "DESC": "Giảm dần",
+    "Order by": "Xếp theo",
     "30 Days": "30 Ngày",
     "60 Days": "60 Ngày",
     "90 Days": "90 Ngày",
