#4 duybv full function holidays

--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -24,6 +24,10 @@
     "ASC": "Tăng dần",
     "DESC": "Giảm dần",
     "Order by": "Xếp theo",
+    "Updated at": "Ngày cập nhật",
+    "Created at": "Ngày tạo",
+    "Filter": "Lọc",
+    "Keywords": "Từ khóa",
     "30 Days": "30 Ngày",
     "60 Days": "60 Ngày",
     "90 Days": "90 Ngày",
