--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -3,18 +3,28 @@
     "Vertical Email": "Xác thực mail",
     "Manager Staff": "Quản lí nhân viên",
     "Account Manager": "Quản lí tài khoản",
+    "Approve": "Duyệt",
+    "Reject": "Từ chối",
     "Setting": "Cài Đặt",
     "Change Password": "Đổi mật khẩu",
     "Account information": "Thông tin tài khoản",
     "Account Edit": "Sửa thông tin tài khoản",
     "Are you sure you want to delete?": "Bạn có chắc chắn muốn xóa?",
+    "Are you sure you want to cancel?": "Bạn có chắc chắn muốn hủy?",
     "Funtions": "Chức năng",
     "Add New Staff": "Thêm mới nhân viên",
     "Add New": "Thêm mới",
     "Add New Complete": "Thêm mới thành công",
     "Yes, Delete it!": "Có, Hãy xóa nó !",
+    "Yes, Cancel it!": "Có, Hãy hủy nó !",
     "Erros": "Lỗi",
-    "Remote, On leave, OT": "Remote, Nghỉ phép, OT",
+    "Cannot Edit": "Không được phép sửa !",
+    "Cannot cancel": "Không được phép hủy !",
+    "Cannot Approve !": "Không được phép duyệt !",
+    "Remote": "Làm việc từ xa",
+    "Registered Remote": "đã đăng kí làm việc từ xa !",
+    "Registered Staff": "đã được thêm mới !",
+    "Notifications": "Thông báo",
     "Add New Registration": "Đăng kí mới ",
     "Registration": "Đăng kí",
     "Manager": "Quản lí",
