code#9 tungts complete remote and managerremote

--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -12,6 +12,7 @@
     "Account Edit": "Sửa thông tin tài khoản",
     "Are you sure you want to delete?": "Bạn có chắc chắn muốn xóa?",
     "Are you sure you want to cancel?": "Bạn có chắc chắn muốn hủy?",
+    "Codes": "Mã nhân viên",
     "Funtions": "Chức năng",
     "Add New Staff": "Thêm mới nhân viên",
     "Add New": "Thêm mới",
