code #8 duybv crud ot user

--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -28,6 +28,9 @@
     "Created at": "Ngày tạo",
     "Filter": "Lọc",
     "Keywords": "Từ khóa",
+    "Overtimes": "Tăng ca",
+    "Manage Overtimes": "Xét duyệt",
+    "Overtime application form": "Đơn đăng kí tăng ca",
     "30 Days": "30 Ngày",
     "60 Days": "60 Ngày",
     "90 Days": "90 Ngày",
