code_#9 tungts remote cmp

--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -4,7 +4,7 @@
     "Vertical Email": "Xác thực mail",
     "Manager Staff": "Quản lí nhân viên",
     "Account Manager": "Quản lí tài khoản",
-    "Approve": "Duyệt",
+    "Approve": "Xét duyệt",
     "Reject": "Từ chối",
     "Setting": "Cài Đặt",
     "Change Password": "Đổi mật khẩu",
@@ -22,7 +22,7 @@
     "Erros": "Lỗi",
     "Cannot Edit": "Không được phép sửa !",
     "Cannot cancel": "Không được phép hủy !",
-    "Cannot Approve !": "Không được phép duyệt !",
+    "Cannot Approve !": "Không được phép !",
     "Remote": "Làm việc từ xa",
     "Registered Remote": "đã đăng kí làm việc từ xa !",
     "Registered Staff": "đã được thêm mới !",
@@ -31,6 +31,7 @@
     "Registration": "Đăng kí",
     "Manager": "Quản lí",
     "Holidays": "Nghỉ lễ",
+    "Creator": "Người tạo",
     "Manage Holidays": "Quản lý nghỉ lễ",
     "Options": "Lựa chọn",
     "From Date": "Từ ngày",
