#4 duybv code manage ot

--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -30,6 +30,7 @@
     "Keywords": "Từ khóa",
     "Overtimes": "Tăng ca",
     "Manage Overtimes": "Xét duyệt",
+    "Add New Registration": "Tạo đơn",
     "Overtime application form": "Đơn đăng kí tăng ca",
     "30 Days": "30 Ngày",
     "60 Days": "60 Ngày",
