#8 duybv change setting, holiday to 2 step approve, detail button

--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -32,6 +32,8 @@
     "Manage Overtimes": "Xét duyệt",
     "Add New Registration": "Tạo đơn",
     "Overtime application form": "Đơn đăng kí tăng ca",
+    "This application needs to be sent to admin for approval": "Đơn này cần gửi lên admin duyệt",
+    "Send": "Gửi",
     "30 Days": "30 Ngày",
     "60 Days": "60 Ngày",
     "90 Days": "90 Ngày",
