CODE#9 tungts complete Remote !

--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -7,6 +7,7 @@
     "Approve": "Xét duyệt",
     "Reject": "Từ chối",
     "Setting": "Cài Đặt",
+    "Subject": "Tiêu đề",
     "Change Password": "Đổi mật khẩu",
     "Account information": "Thông tin tài khoản",
     "Account Edit": "Sửa thông tin tài khoản",
@@ -29,9 +30,12 @@
     "Notifications": "Thông báo",
     "Add New Registration": "Đăng kí mới ",
     "Registration": "Đăng kí",
+    "Remotes Registration": "Đăng kí mới ",
     "Manager": "Quản lí",
     "Holidays": "Nghỉ lễ",
     "Creator": "Người tạo",
+    "Confirm cancellation!": "Xác nhận hủy bỏ!",
+    "Enter your reason!": "Nhập lí do của bạn!",
     "Manage Holidays": "Quản lý nghỉ lễ",
     "Options": "Lựa chọn",
     "From Date": "Từ ngày",
