--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -52,6 +52,8 @@
     "Manage Overtimes": "Xét duyệt",
     "Add New Registration": "Tạo đơn",
     "Overtime application form": "Đơn đăng kí tăng ca",
+    "Confirm OT": "Xác nhận tăng ca",
+    "Registered OT": "Đăng kí OT",
     "This application needs to be sent to admin for approval": "Đơn này cần gửi lên admin duyệt",
     "Send": "Gửi",
     "30 Days": "30 Ngày",
