#6 duybv optimize view

--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -61,7 +61,7 @@
     "Remaining vacation time": "Số phép dư",
     "Remaining leave time by month": "Phép theo tháng còn lại",
     "Number of applications that have not been approved/confirmed": "Số lượng đơn chưa được phê duyệt/xác nhận",
-    "In out": "Vào ra",
+    "In out": "Quên check-in/out",
     "Leaves": "Nghỉ phép",
     "30 Days": "30 Ngày",
     "60 Days": "60 Ngày",
