#7 duybv in out forget

--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -28,7 +28,6 @@
     "Registered Remote": "đã đăng kí làm việc từ xa !",
     "Registered Staff": "đã được thêm mới !",
     "Notifications": "Thông báo",
-    "Add New Registration": "Đăng kí mới ",
     "Registration": "Đăng kí",
     "Remotes Registration": "Đăng kí mới ",
     "Manager": "Quản lí",
@@ -54,6 +53,7 @@
     "Overtime application form": "Đơn đăng kí tăng ca",
     "Confirm OT": "Xác nhận tăng ca",
     "Registered OT": "Đăng kí OT",
+    "Registered InOutForget": "Đăng kí chấm công",
     "This application needs to be sent to admin for approval": "Đơn này cần gửi lên admin duyệt",
     "Send": "Gửi",
     "No data": "Không có dữ liệu",
@@ -61,8 +61,13 @@
     "Remaining vacation time": "Số phép dư",
     "Remaining leave time by month": "Phép theo tháng còn lại",
     "Number of applications that have not been approved/confirmed": "Số lượng đơn chưa được phê duyệt/xác nhận",
-    "In out": "Quên check-in/out",
+    "In out": "Quên chấm công",
+    "In out forget form": "Đơn quên chấm công",
     "Leaves": "Nghỉ phép",
+    "Date": "Ngày",
+    "Check-in": "Vào",
+    "Check-out": "Ra",
+    "Remote check-in": "bắt đầu làm việc từ xa",
     "30 Days": "30 Ngày",
     "60 Days": "60 Ngày",
     "90 Days": "90 Ngày",
