--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -21,6 +21,9 @@
     "Yes, Delete it!": "Có, Hãy xóa nó !",
     "Yes, Cancel it!": "Có, Hãy hủy nó !",
     "Erros": "Lỗi",
+    "Exports Salary": "Xuất bảng lương",
+    "Select month": "Chọn tháng",
+    "Select file": "Chọn file",
     "Cannot Edit": "Không được phép sửa !",
     "Cannot cancel": "Không được phép hủy !",
     "Cannot Approve !": "Không được phép !",
